# SuperAgent

./: .gitignore  README.md  config-example.yaml  config.yaml  docker-compose.yaml  go.mod  go.sum  init.sql  langgraph.json  main.go  main.py  pyproject.toml  test.py
SuperAgentFrontend/: .gitignore  README.md  index.html  package-lock.json  package.json
SuperAgentFrontend/src/: App.vue  style.css
api/: chat.go  chat_test.go
assets/documents/: muelsyse copy.txt  muelsyse_docs.txt  test.txt
cmd/di/: providers.go  wire.go  wire_gen.go
cmd/server/: main.go
config/: config.go
configs/: config-example.yaml
constants/: common.go
docs/: README.md
document/: BuildRAG.go  BuildRAG_test.go  SearchRAG.go  SearchRAG_test.go  Splitter.go  Splitter_test.go  test.go  test.txt
examples/: README.md  stream_client.html  test_stream.sh
global/: global.go
graph/: graph.go  graph_main.go  main.go  muelsyse.txt  state.go  try.go
initialize/: chat_model.go  client.go  config.go  embedder.go  indexer.go  retriever.go
internal/agents/: ReadMe.md  example_usage.go
internal/config/: loader.go
internal/constants/: agentState.go
internal/global/: global.go
internal/models/: config.go
internal/pipeline/: flow.go  lambda_func.go  model.go  orchestration.go  prompt.go  (+1 more)
message_model/: chat.go
model/: chat.go
router/: model.go
service/: chat.go
tests/: document.go  flow.go  graphChat.go  lambda_func.go  main.go  model.go  modelChat.go  orchestration.go  prompt.go  tools_node.go
tools/: BrowerGet.go  BrowerGet_test.go  GoogleSearch.go  body_report.go
(+43 files in other folders)
